# Ffmpeg

./: .gitignore  build.gradle  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/user/lv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_log.h  cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_jni.cpp
app/src/main/cpp/include/: config.h
app/src/main/cpp/include/libavcodec/: libavcodec.pc
app/src/main/cpp/include/libavformat/: libavformat.pc
app/src/main/cpp/include/libavutil/: libavutil.pc
app/src/main/cpp/include/libpostproc/: libpostproc.pc
app/src/main/java/com/user/lv/: AboutFragment.java  MainActivity.java
app/src/main/java/com/user/lv/common/: App.java  AppExecutors.java  Click.java  PermissionHelper.java  SecureProgressDialog.java  SnackBarUtil.java
app/src/main/java/com/user/lv/edit/: BaseEditActivity.java  EditItem.java  EditItemAdapter.java  EditMediaListActivity.java  MediaFile.java  MediaItemAdapter.java
app/src/main/java/com/user/lv/ffmpeg/: Callback.java  FFmpeg.java  FFmpegJni.java  FFmpegVideo.java
app/src/main/java/com/user/lv/utils/: DeviceUtils.java  FileUtil.java  ViewUtils.java
app/src/main/java/com/user/lv/video/: VideoFFplayView.java  VideoFlipActivity.java  VideoFragment.java  VideoPlayActivity.java
app/src/main/res/layout/: activity_main.xml  activity_media_list.xml  activity_play_video.xml  activity_videoflip.xml  fragment_about.xml  fragment_video.xml  item_media.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/user/lv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
